refactor: Refactor MatchingModeSelector and create ModeSelector component

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -16,9 +16,17 @@
   "all-found-sources": "Alle gefundenen Quellen",
   "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
   "allow-author-format-variations": "Autorformat-Variationen erlauben",
+  "allow-author-format-variations-description": "Verschiedene Autorennamen-Formate und Anordnungsstile abgleichen",
+  "allow-author-format-variations-example": "\"Smith, J.\" passt zu \"J. Smith\" und \"John Smith\"",
   "allow-date-format-variations": "Datumsformat-Variationen erlauben",
+  "allow-date-format-variations-description": "Verschiedene Datumsformate und -darstellungen abgleichen",
+  "allow-date-format-variations-example": "\"2024\" passt zu \"2024-01-01\" und \"Januar 2024\"",
   "allow-journal-abbreviations": "Journal-Abkürzungen erlauben",
+  "allow-journal-abbreviations-description": "Zeitschriftentitel mit ihren Abkürzungsformen abgleichen",
+  "allow-journal-abbreviations-example": "\"Nature\" passt zu \"Nat.\" und \"Nature Magazine\"",
   "allow-page-format-variations": "Seitenformat-Variationen erlauben",
+  "allow-page-format-variations-description": "Verschiedene Seitenzahlen-Formate und -Bereiche abgleichen",
+  "allow-page-format-variations-example": "\"123-130\" passt zu \"123–130\" und \"S. 123-130\"",
   "analyzing-references": "Analysiere Referenzinhalte…",
   "analyzing-references-description": "Es wird nach passenden Quellen gesucht und die Übereinstimmung mit deinen Referenzen überprüft. Je nach Anzahl der Referenzen kann dies einige Zeit dauern.",
   "analyzing-text-content": "Analysiere Textinhalt…",
@@ -75,6 +83,18 @@
   "custom-configuration": "Individuelle Konfiguration",
   "custom-configuration-description": "Konfigurieren Sie Ihre personalisierten Extraktionsregeln und -präferenzen",
   "custom-matching-settings": "Benutzerdefinierte Abgleichseinstellungen",
+  "custom-matching-settings-description": "Konfigurieren Sie detailliertes Abgleichsverhalten und Toleranzstufen für den benutzerdefinierten Modus",
+  "text-matching-options-description": "Grundlegende Textvergleichs- und Normalisierungseinstellungen",
+  "format-variations-description": "Verschiedene Formatierungsstile für häufige bibliographische Elemente zulassen",
+  "matching-thresholds-description": "Minimale Ähnlichkeitswerte und Fuzzy-Matching-Parameter festlegen",
+  "custom-extraction-settings": "Benutzerdefinierte Extraktionseinstellungen",
+  "custom-extraction-settings-description": "Konfigurieren Sie detailliertes Extraktionsverhalten für den benutzerdefinierten Modus",
+  "content-formatting-settings": "Inhaltsformatierung",
+  "content-formatting-settings-description": "Einstellungen für Formatierung und Standardisierung bibliographischer Inhalte",
+  "technical-processing-settings": "Technische Verarbeitung",
+  "technical-processing-settings-description": "Erweiterte technische Verarbeitungs- und Fehlerkorrektureinstellungen",
+  "text-processing-settings": "Textverarbeitung",
+  "text-processing-settings-description": "Grundlegende Textreinigung und Normalisierungseinstellungen",
   "dark": "Dunkel",
   "date-information": "Datums-Informationen",
   "date-range": "Datumsbereich",
@@ -99,6 +119,8 @@
   "download-report-pdf": "Bericht als PDF herunterladen",
   "edition": "Auflage",
   "enable-fuzzy-matching": "Fuzzy-Matching aktivieren",
+  "enable-fuzzy-matching-description": "Ungefähren Zeichenkettenabgleich für erhöhte Toleranz erlauben",
+  "enable-fuzzy-matching-example": "\"Smith\" kann zu \"Smyth\" oder \"Smithe\" passen",
   "english": "Englisch",
   "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
   "enter-references": "Bitte geben Sie einen Text ein oder importieren Sie eine PDF-Datei mit Referenzen, um diese zu überprüfen",
@@ -181,6 +203,14 @@
     "what-happens": "Was passiert (alle Ausgewogen-Funktionen PLUS):",
     "what-not-happens": "Was dennoch NICHT passiert:"
   },
+  "extraction-mode-strict-tooltip-title": "Streng-Modus Details",
+  "extraction-mode-strict-tooltip-description": "Exakte, zeichengenaue Extraktion von Quelldaten ohne jegliche Modifikation. Extrahiert Metadaten genau wie sie erscheinen, ohne Korrekturen, Normalisierungen oder Interpretationen.",
+  "extraction-mode-balanced-tooltip-title": "Ausgewogen-Modus Details",
+  "extraction-mode-balanced-tooltip-description": "Systematische Korrektur von Formatierung und Tippfehlern bei Beibehaltung der Inhaltsgenauigkeit. Korrigiert offensichtliche Fehler und standardisiert Formatierung, bewahrt aber die ursprüngliche Inhaltsbedeutung.",
+  "extraction-mode-tolerant-tooltip-title": "Tolerant-Modus Details",
+  "extraction-mode-tolerant-tooltip-description": "Maximale KI-Intelligenz für fehlertolerante Extraktion aus problematischen Quellen. Beinhaltet alle Ausgewogen-Funktionen plus intelligente Inferenz und Vervollständigung fehlender Informationen.",
+  "extraction-mode-custom-tooltip-title": "Benutzerdefiniert-Modus Details",
+  "extraction-mode-custom-tooltip-description": "Erstellen Sie Ihre eigenen Extraktionsregeln mit vollständiger Kontrolle über das KI-Verhalten. Konfigurieren Sie jeden Verarbeitungsschritt individuell entsprechend Ihren spezifischen Anforderungen.",
   "extraction-modification": "Änderung bei der Extraktion",
   "extraction-publication-details": "Publikations-Details",
   "extraction-select-all": "Alle auswählen",
@@ -296,6 +326,8 @@
   "found": "Gefunden",
   "found-references-tooltip": "Alle im Text erkannten Referenzen",
   "fuzzy-matching-threshold": "Fuzzy-Matching-Schwellenwert",
+  "fuzzy-matching-threshold-description": "Empfindlichkeit für ungefähren Zeichenkettenabgleich festlegen (höher = strenger)",
+  "fuzzy-matching-threshold-example": "0,8 = 80% Ähnlichkeit für einen Treffer erforderlich",
   "general": "Allgemein",
   "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension",
   "german": "Deutsch",
@@ -312,8 +344,14 @@
   "idle-state-text": "Sie haben noch keine Eingabe gemacht oder die Überprüfung noch nicht gestartet. Bitte geben Sie einen Text ein oder laden Sie eine PDF-Datei hoch und klicken Sie auf 'Überprüfen'",
   "idle-state-title": "Eingabe oder Überprüfung ausstehend",
   "ignore-case": "Groß-/Kleinschreibung ignorieren",
+  "ignore-case-description": "Text unabhängig von Groß- oder Kleinbuchstaben abgleichen",
+  "ignore-case-example": "\"Journal\" passt zu \"JOURNAL\" und \"journal\"",
   "ignore-punctuation": "Interpunktion ignorieren",
+  "ignore-punctuation-description": "Text unter Ignorierung von Satzzeichen und Sonderzeichen abgleichen",
+  "ignore-punctuation-example": "\"Nature\" passt zu \"Nature.\" und \"Nature;\"",
   "ignore-whitespace": "Leerzeichen ignorieren",
+  "ignore-whitespace-description": "Text unter Ignorierung von Leerzeichen, Tabs und Zeilenumbrüchen abgleichen",
+  "ignore-whitespace-example": "\"Cell Biology\" passt zu \"CellBiology\" und \"Cell  Biology\"",
   "impact": "Auswirkung",
   "import-pdf-or-add-references": "Importiere eine PDF-Datei oder füge Referenzen direkt in das Textfeld ein, um die Überprüfung zu starten.",
   "in-press": "Im Druck",
@@ -402,6 +440,8 @@
   "metadata": "Metadaten",
   "min": "min",
   "minimum-match-threshold": "Minimaler Abgleichsschwellenwert",
+  "minimum-match-threshold-description": "Minimalen Gesamtähnlichkeitswert für einen erfolgreichen Abgleich festlegen",
+  "minimum-match-threshold-example": "75% = Referenzen müssen mindestens 75% ähnlich sein, um zu passen",
   "modification-type-abbreviation-expansion": "Abkürzungs-Erweiterung",
   "modification-type-author-name-formatting": "Autornamen-Formatierung",
   "modification-type-capitalization": "Großschreibung",
@@ -440,6 +480,8 @@
   "no-title": "Kein Titel",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
   "normalize-characters": "Zeichen normalisieren",
+  "normalize-characters-description": "Sonderzeichen in ihre Standardäquivalente umwandeln",
+  "normalize-characters-example": "\"café\" passt zu \"cafe\", \"–\" passt zu \"-\"",
   "not-verified": "Nicht verifiziert",
   "note": "Hinweis",
   "o3-mini-description": "Schnelles, flexibles, intelligentes Denkmodell",
