--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -16,9 +16,17 @@
   "all-found-sources": "All Found Sources",
   "all-references-verified": "All {total} references verified ✓",
   "allow-author-format-variations": "Allow Author Format Variations",
+  "allow-author-format-variations-description": "Match different author name formats and ordering styles",
+  "allow-author-format-variations-example": "\"Smith, J.\" matches \"J. Smith\" and \"John Smith\"",
   "allow-date-format-variations": "Allow Date Format Variations",
+  "allow-date-format-variations-description": "Match different date formats and representations",
+  "allow-date-format-variations-example": "\"2024\" matches \"2024-01-01\" and \"January 2024\"",
   "allow-journal-abbreviations": "Allow Journal Abbreviations",
+  "allow-journal-abbreviations-description": "Match journal titles with their abbreviated forms",
+  "allow-journal-abbreviations-example": "\"Nature\" matches \"Nat.\" and \"Nature Magazine\"",
   "allow-page-format-variations": "Allow Page Format Variations",
+  "allow-page-format-variations-description": "Match different page number formats and ranges",
+  "allow-page-format-variations-example": "\"123-130\" matches \"123–130\" and \"pp. 123-130\"",
   "analyzing-references": "Analyzing reference content…",
   "analyzing-references-description": "We're searching for matching sources and checking them against your references. This may take some time depending on the number of references.",
   "analyzing-text-content": "Analyzing text content…",
@@ -75,6 +83,18 @@
   "custom-configuration": "Custom Configuration",
   "custom-configuration-description": "Configure your personalized extraction rules and preferences",
   "custom-matching-settings": "Custom Matching Settings",
+  "custom-matching-settings-description": "Configure detailed matching behavior and tolerance levels for custom mode",
+  "text-matching-options-description": "Basic text comparison and normalization settings",
+  "format-variations-description": "Allow different formatting styles for common bibliographic elements",
+  "matching-thresholds-description": "Set minimum similarity scores and fuzzy matching parameters",
+  "custom-extraction-settings": "Custom Extraction Settings",
+  "custom-extraction-settings-description": "Configure detailed extraction behavior for custom mode",
+  "content-formatting-settings": "Content Formatting",
+  "content-formatting-settings-description": "Settings for formatting and standardizing bibliographic content",
+  "technical-processing-settings": "Technical Processing",
+  "technical-processing-settings-description": "Advanced technical processing and error correction settings",
+  "text-processing-settings": "Text Processing",
+  "text-processing-settings-description": "Basic text cleaning and normalization settings",
   "dark": "Dark",
   "date-information": "Date Information",
   "date-range": "Date Range",
@@ -98,6 +118,8 @@
   "download-report-pdf": "Download report as PDF",
   "edition": "Edition",
   "enable-fuzzy-matching": "Enable Fuzzy Matching",
+  "enable-fuzzy-matching-description": "Allow approximate string matching for increased tolerance",
+  "enable-fuzzy-matching-example": "\"Smith\" can match \"Smyth\" or \"Smithe\"",
   "english": "English",
   "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
   "enter-references": "Please enter a text or import a PDF containing references to verify them",
@@ -180,6 +202,14 @@
     "what-happens": "What happens (all Balanced features PLUS):",
     "what-not-happens": "What still does NOT happen:"
   },
+  "extraction-mode-strict-tooltip-title": "Strict Mode Details",
+  "extraction-mode-strict-tooltip-description": "Exact, character-by-character extraction of source data without any modification. Extract metadata exactly as it appears, with no corrections, normalizations, or interpretations.",
+  "extraction-mode-balanced-tooltip-title": "Balanced Mode Details",
+  "extraction-mode-balanced-tooltip-description": "Systematically fix formatting and typos while maintaining content accuracy. Corrects obvious errors and standardizes formatting, but preserves original content meaning.",
+  "extraction-mode-tolerant-tooltip-title": "Tolerant Mode Details",
+  "extraction-mode-tolerant-tooltip-description": "Maximum AI intelligence for error-tolerant extraction from problematic sources. Includes all Balanced features plus intelligent inference and completion of missing information.",
+  "extraction-mode-custom-tooltip-title": "Custom Mode Details",
+  "extraction-mode-custom-tooltip-description": "Build your own extraction rules with complete control over AI behavior. Configure each processing step individually to match your specific requirements.",
   "extraction-modification": "Extraction Modification",
   "extraction-publication-details": "Publication Details",
   "extraction-select-all": "Select All",
@@ -295,6 +325,8 @@
   "found": "Found",
   "found-references-tooltip": "All references recognized in the text",
   "fuzzy-matching-threshold": "Fuzzy Matching Threshold",
+  "fuzzy-matching-threshold-description": "Set sensitivity for approximate string matching (higher = more strict)",
+  "fuzzy-matching-threshold-example": "0.8 = 80% similarity required for a match",
   "general": "General",
   "general-description": "Manage basic settings for the extension's functionality",
   "german": "German",
@@ -311,8 +343,14 @@
   "idle-state-text": "You have not entered any input yet or have not started the verification. Please enter text or upload a PDF file and click on 'Verify'",
   "idle-state-title": "Input or verification pending",
   "ignore-case": "Ignore Case",
+  "ignore-case-description": "Match text regardless of uppercase or lowercase letters",
+  "ignore-case-example": "\"Journal\" matches \"JOURNAL\" and \"journal\"",
   "ignore-punctuation": "Ignore Punctuation",
+  "ignore-punctuation-description": "Match text ignoring punctuation marks and special characters",
+  "ignore-punctuation-example": "\"Nature\" matches \"Nature.\" and \"Nature;\"",
   "ignore-whitespace": "Ignore Whitespace",
+  "ignore-whitespace-description": "Match text ignoring spaces, tabs, and line breaks",
+  "ignore-whitespace-example": "\"Cell Biology\" matches \"CellBiology\" and \"Cell  Biology\"",
   "impact": "Impact",
   "import-pdf-or-add-references": "Upload a PDF file or paste references into the text field to start verification.",
   "in-press": "In Press",
@@ -379,6 +417,7 @@
   "matching-mode-custom-tooltip-description": "User-defined matching rules and tolerance levels.",
   "matching-mode-custom-tooltip-title": "Custom Matching Mode",
   "matching-mode-description": "Configure how strictly sources are matched against references",
+  "matching-mode-strict": "Strict",
   "matching-mode-strict-description": "Exact matches only - every character, capitalization, and format must match precisely",
   "matching-mode-strict-tooltip": "Exact matching only - requires perfect correspondence between reference and database entries. No variations allowed.",
   "matching-mode-strict-tooltip-description": "Exact character-by-character matching. Every detail must match precisely.",
@@ -400,6 +439,8 @@
   "metadata": "Metadata",
   "min": "min",
   "minimum-match-threshold": "Minimum Match Threshold",
+  "minimum-match-threshold-description": "Set minimum overall similarity score required for a successful match",
+  "minimum-match-threshold-example": "75% = references must be at least 75% similar to match",
   "modification-type-abbreviation-expansion": "Abbreviation Expansion",
   "modification-type-author-name-formatting": "Author Name Formatting",
   "modification-type-capitalization": "Capitalization",
@@ -438,6 +479,8 @@
   "no-title": "No title",
   "no-valid-dois-were-found": "No DOIs found",
   "normalize-characters": "Normalize Characters",
+  "normalize-characters-description": "Convert special characters to their standard equivalents",
+  "normalize-characters-example": "\"café\" matches \"cafe\", \"–\" matches \"-\"",
   "not-verified": "Not verified",
   "note": "Note",
   "o3-mini-description": "Fast, flexible, intelligent reasoning model",
