feat: add Match Quality Panel with settings and localization support

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -442,6 +442,21 @@
   "minimum-match-threshold": "Minimaler Abgleichsschwellenwert",
   "minimum-match-threshold-description": "Minimalen Gesamtähnlichkeitswert für einen erfolgreichen Abgleich festlegen",
   "minimum-match-threshold-example": "75% = Referenzen müssen mindestens 75% ähnlich sein, um zu passen",
+  "match-quality-thresholds": "Abgleichsqualität-Klassifizierung",
+  "match-quality-thresholds-description": "Bewertungsbereiche für visuelle Qualitätsindikatoren definieren",
+  "exact-match-threshold": "Exakte Übereinstimmungs-Schwelle",
+  "exact-match-threshold-description": "Mindestbewertung für grünen 'exakte Übereinstimmung' Indikator",
+  "exact-match-threshold-example": "95% = Bewertungen 95-100% werden als grüne exakte Übereinstimmungen angezeigt",
+  "high-match-threshold": "Hohe Übereinstimmungs-Schwelle",
+  "high-match-threshold-description": "Mindestbewertung für orangenen 'hohe Qualität' Indikator",
+  "high-match-threshold-example": "70% = Bewertungen 70-94% werden als orangene hochwertige Übereinstimmungen angezeigt",
+  "exact-match": "Exakte Übereinstimmung",
+  "high-match": "Hohe Übereinstimmung",
+  "no-match": "Keine Übereinstimmung",
+  "match-quality-settings-title": "Übereinstimmungsqualität-Visualisierung",
+  "match-quality-settings-description": "Konfigurieren Sie, wie Übereinstimmungswerte visuell mit Farben und Indikatoren dargestellt werden",
+  "quality-thresholds": "Qualitäts-Klassifizierungs-Schwellenwerte",
+  "quality-thresholds-description": "Legen Sie die Bewertungsbereiche fest, die bestimmen, wann eine Übereinstimmung als exakt, hoch oder schlechte Qualität betrachtet wird",
   "modification-type-abbreviation-expansion": "Abkürzungs-Erweiterung",
   "modification-type-author-name-formatting": "Autornamen-Formatierung",
   "modification-type-capitalization": "Großschreibung",
