--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -441,6 +441,21 @@
   "minimum-match-threshold": "Minimum Match Threshold",
   "minimum-match-threshold-description": "Set minimum overall similarity score required for a successful match",
   "minimum-match-threshold-example": "75% = references must be at least 75% similar to match",
+  "match-quality-thresholds": "Match Quality Classification",
+  "match-quality-thresholds-description": "Define score ranges for visual match quality indicators",
+  "exact-match-threshold": "Exact Match Threshold",
+  "exact-match-threshold-description": "Minimum score for green 'exact match' indicator",
+  "exact-match-threshold-example": "95% = scores 95-100% show as green exact matches",
+  "high-match-threshold": "High Match Threshold",
+  "high-match-threshold-description": "Minimum score for orange 'high quality match' indicator",
+  "high-match-threshold-example": "70% = scores 70-94% show as orange high matches",
+  "exact-match": "Exact Match",
+  "high-match": "High Match",
+  "no-match": "No Match",
+  "match-quality-settings-title": "Match Quality Visualization",
+  "match-quality-settings-description": "Configure how match scores are visually represented with colors and indicators",
+  "quality-thresholds": "Quality Classification Thresholds",
+  "quality-thresholds-description": "Set the score ranges that determine when a match is considered exact, high, or poor quality",
   "modification-type-abbreviation-expansion": "Abbreviation Expansion",
   "modification-type-author-name-formatting": "Author Name Formatting",
   "modification-type-capitalization": "Capitalization",
