refactor: update matching tolerance mode translations and adjust weights interface for optional fields

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -429,6 +429,9 @@
   "matching-mode-tolerant-tooltip": "Maximale Flexibilität - verarbeitet verschiedene Formatierungsstile und kleinere Fehler. Ideal für schlecht formatierte oder ältere Quellen.",
   "matching-mode-tolerant-tooltip-description": "Semantisches Abgleichen mit erheblichen Format- und Stilvariationen.",
   "matching-mode-tolerant-tooltip-title": "Toleranter Abgleichsmodus",
+  "matching-tolerance-mode-title": "Toleranzmodus",
+  "matching-tolerance-mode-description": "Konfigurieren Sie, wie tolerant der Vergleich von Referenzen mit Quellen sein soll",
+  "matching-tolerance-mode-subtitle": "Wählen Sie das Flexibilitätsniveau für den Quellenabgleich",
   "matching-normalize-characters": "Sonderzeichen normalisieren",
   "matching-settings-description": "Konfigurieren, wie Referenzen gegen Datenbanken abgeglichen werden",
   "matching-settings-title": "Abgleichseinstellungen",
