--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -428,6 +428,9 @@
   "matching-mode-tolerant-tooltip": "Maximum flexibility - handles various formatting styles and minor errors. Best for poorly formatted or older sources.",
   "matching-mode-tolerant-tooltip-description": "Semantic matching allowing significant format and style variations.",
   "matching-mode-tolerant-tooltip-title": "Tolerant Matching Mode",
+  "matching-tolerance-mode-title": "Tolerance Mode",
+  "matching-tolerance-mode-description": "Configure how tolerant the matching should be when comparing references with sources",
+  "matching-tolerance-mode-subtitle": "Choose the level of flexibility for source matching",
   "matching-normalize-characters": "Normalize special characters",
   "matching-settings-description": "Configure how references are matched against databases",
   "matching-settings-title": "Matching Settings",
