refactor: update extraction processing rules and improve category handling

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -575,9 +575,9 @@
   "setting-fix-formatting-problems": "Formatierungsprobleme beheben",
   "setting-fix-formatting-problems-description": "Abstände und Struktur korrigieren",
   "setting-fix-formatting-problems-example": "Fehlende Leerzeichen nach Satzzeichen korrigieren",
-  "setting-fix-unicode-issues": "Unicode-Probleme beheben",
-  "setting-fix-unicode-issues-description": "Sonderzeichen normalisieren",
-  "setting-fix-unicode-issues-example": "\"–\" → \"-\", Kodierungsprobleme beheben",
+  "setting-fix-encoding-issues": "Kodierungsprobleme beheben",
+  "setting-fix-encoding-issues-description": "Sonderzeichen normalisieren",
+  "setting-fix-encoding-issues-example": "\"–\" → \"-\", Kodierungsprobleme beheben",
   "setting-format-author-names": "Autorennamen formatieren",
   "setting-format-author-names-description": "Einheitliche Formatierung von Autorennamen",
   "setting-format-author-names-example": "\"smith j\" → \"Smith, J.\"",
@@ -614,6 +614,9 @@
   "setting-typo-correction": "Tippfehlerkorrektur",
   "setting-typo-correction-description": "Offensichtliche Rechtschreibfehler korrigieren",
   "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
+  "setting-remove-artifact": "Artefakte entfernen",
+  "setting-remove-artifact-description": "Entfernen von Artefaktzeichen",
+  "setting-remove-artifact-example": "[1] → \"\"",
   "show-additional-fields": "Zusätzliche Felder anzeigen",
   "show-date-details": "Datumsdetails anzeigen",
   "show-details": "Details anzeigen",
