--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -574,9 +574,9 @@
   "setting-fix-formatting-problems": "Fix Formatting Problems",
   "setting-fix-formatting-problems-description": "Correct spacing and structure",
   "setting-fix-formatting-problems-example": "Fix missing spaces after punctuation",
-  "setting-fix-unicode-issues": "Fix Unicode Issues",
-  "setting-fix-unicode-issues-description": "Normalize special characters",
-  "setting-fix-unicode-issues-example": "\"–\" → \"-\", fix encoding problems",
+  "setting-fix-encoding-issues": "Fix Encoding Issues",
+  "setting-fix-encoding-issues-description": "Normalize special characters",
+  "setting-fix-encoding-issues-example": "\"–\" → \"-\", fix encoding problems",
   "setting-format-author-names": "Format Author Names",
   "setting-format-author-names-description": "Consistent author name formatting",
   "setting-format-author-names-example": "\"smith j\" → \"Smith, J.\"",
@@ -613,6 +613,9 @@
   "setting-typo-correction": "Typo Correction",
   "setting-typo-correction-description": "Fix obvious spelling errors",
   "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
+  "setting-remove-artifacts": "Remove Artifacts",
+  "setting-remove-artifacts-description": "Remove artifact characters",
+  "setting-remove-artifacts-example": "[1] → \"\"",
   "show-additional-fields": "Show additional fields",
   "show-date-details": "Show date details",
   "show-details": "Show Details",
