refactor: enhance reference score tooltip and add localization for score title and description

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -5,7 +5,7 @@
   "advanced-fields": "Erweiterte Felder",
   "advanced-fields-description": "Diese Felder sind optional und können zusätzliche Matching-Präzision für spezialisierte Inhaltstypen bieten. Aktivieren Sie nur die für Ihren Anwendungsfall relevanten Felder.",
   "advanced-interpretation": "Erweiterte Interpretation",
-  "advanced-interpretation-description": "Intelligente Inhaltsergänzung und Quellenerkennung",
+  "advanced-interpretation-description": "Intelligente Inhaltsergänzung und Quellerkennung",
   "advisor": "Betreuer",
   "ai": "KI",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
@@ -534,6 +534,8 @@
   "re-verifying-reference": "Überprüfe erneut: {reference}",
   "recommended": "Empfohlen",
   "reference-metadata": "Referenz-Metadaten",
+  "reference-score-title": "Beste Übereinstimmung",
+  "reference-score-description": "Zeigt wie gut diese Referenz mit der bestpassenden Quelle in wissenschaftlichen Datenbanken (Crossref, PubMed, etc.) übereinstimmt.",
   "references-count": "{count} Referenzen",
   "registered": "Registriert",
   "reload-page-auto-import": "Seite neu laden, um Referenzen automatisch zu finden und zu importieren",
