refactor: update type imports for consistency and enhance modification types in localization files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -466,14 +466,23 @@
   "modification-type-date-formatting": "Datum-Formatierung",
   "modification-type-derivation": "Ableitung",
   "modification-type-duplicate-removal": "Duplikat-Entfernung",
+  "modification-type-expand-abbreviations": "Abkürzungen erweitern",
   "modification-type-field-derivation": "Feld-Ableitung",
+  "modification-type-fix-encoding-issues": "Kodierungsprobleme beheben",
+  "modification-type-format-author-names": "Autorennamen formatieren",
   "modification-type-format-standardization": "Format-Standardisierung",
   "modification-type-formatting-correction": "Formatierungs-Korrektur",
   "modification-type-identifier-standardization": "Kennung-Standardisierung",
   "modification-type-information-reconstruction": "Informations-Rekonstruktion",
   "modification-type-interpretation": "Interpretation",
+  "modification-type-normalize-title-case": "Großschreibung normalisieren",
   "modification-type-ocr-error-correction": "OCR-Fehler-Korrektur",
   "modification-type-punctuation-standardization": "Interpunktions-Standardisierung",
+  "modification-type-remove-artifacts": "Artefakte entfernen",
+  "modification-type-repair-line-breaks": "Zeilenumbrüche reparieren",
+  "modification-type-standardize-date-format": "Datumsformat standardisieren",
+  "modification-type-standardize-identifiers": "Identifikatoren standardisieren",
+  "modification-type-standardize-punctuation": "Zeichensetzung standardisieren",
   "modification-type-title-case-conversion": "Title-Case-Konvertierung",
   "modification-type-typo-correction": "Tippfehler-Korrektur",
   "modification-type-unicode-fixing": "Unicode-Korrektur",
