--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -465,14 +465,23 @@
   "modification-type-date-formatting": "Date Formatting",
   "modification-type-derivation": "Derivation",
   "modification-type-duplicate-removal": "Duplicate Removal",
+  "modification-type-expand-abbreviations": "Expand Abbreviations",
   "modification-type-field-derivation": "Field Derivation",
+  "modification-type-fix-encoding-issues": "Fix Encoding Issues",
+  "modification-type-format-author-names": "Format Author Names",
   "modification-type-format-standardization": "Format Standardization",
   "modification-type-formatting-correction": "Formatting Correction",
   "modification-type-identifier-standardization": "Identifier Standardization",
   "modification-type-information-reconstruction": "Information Reconstruction",
   "modification-type-interpretation": "Interpretation",
+  "modification-type-normalize-title-case": "Normalize Title Case",
   "modification-type-ocr-error-correction": "OCR Error Correction",
   "modification-type-punctuation-standardization": "Punctuation Standardization",
+  "modification-type-remove-artifacts": "Remove Artifacts",
+  "modification-type-repair-line-breaks": "Repair Line Breaks",
+  "modification-type-standardize-date-format": "Standardize Date Format",
+  "modification-type-standardize-identifiers": "Standardize Identifiers",
+  "modification-type-standardize-punctuation": "Standardize Punctuation",
   "modification-type-title-case-conversion": "Title Case Conversion",
   "modification-type-typo-correction": "Typo Correction",
   "modification-type-unicode-fixing": "Unicode Fixing",
