Refactor reference extraction terminology and update related components

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -91,10 +91,10 @@
   "custom-extraction-settings-description": "Konfigurieren Sie detailliertes Extraktionsverhalten für den benutzerdefinierten Modus",
   "content-formatting-settings": "Inhaltsformatierung",
   "content-formatting-settings-description": "Einstellungen für Formatierung und Standardisierung bibliographischer Inhalte",
-  "technical-processing-settings": "Technische Verarbeitung",
-  "technical-processing-settings-description": "Erweiterte technische Verarbeitungs- und Fehlerkorrektureinstellungen",
-  "text-processing-settings": "Textverarbeitung",
-  "text-processing-settings-description": "Grundlegende Textreinigung und Normalisierungseinstellungen",
+  "technical-extraction-settings": "Technische Verarbeitung",
+  "technical-extraction-settings-description": "Erweiterte technische Verarbeitungs- und Fehlerkorrektureinstellungen",
+  "text-extraction-settings": "Textverarbeitung",
+  "text-extraction-settings-description": "Grundlegende Textreinigung und Normalisierungseinstellungen",
   "dark": "Dunkel",
   "date-information": "Datums-Informationen",
   "date-range": "Datumsbereich",
@@ -649,8 +649,8 @@
   "technical-fixes-description": "OCR-Fehler, Unicode-Probleme und Formatierungsprobleme",
   "test-api-key": "API-Schlüssel testen",
   "text-matching-options": "Text-Abgleichsoptionen",
-  "text-processing": "Textverarbeitung",
-  "text-processing-description": "Grundlegende Textkorrekturen und Normalisierungen",
+  "text-extraction": "Textverarbeitung",
+  "text-extraction-description": "Grundlegende Textkorrekturen und Normalisierungen",
   "theme": "Design",
   "theme-option-description": "Wählen Sie das Design der Erweiterung",
   "title": "Titel",
