--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -91,10 +91,10 @@
   "custom-extraction-settings-description": "Configure detailed extraction behavior for custom mode",
   "content-formatting-settings": "Content Formatting",
   "content-formatting-settings-description": "Settings for formatting and standardizing bibliographic content",
-  "technical-processing-settings": "Technical Processing",
-  "technical-processing-settings-description": "Advanced technical processing and error correction settings",
-  "text-processing-settings": "Text Processing",
-  "text-processing-settings-description": "Basic text cleaning and normalization settings",
+  "technical-extraction-settings": "Technical Extraction",
+  "technical-extraction-settings-description": "Advanced technical extraction and error correction settings",
+  "text-extraction-settings": "Text Extraction",
+  "text-extraction-settings-description": "Basic text cleaning and normalization settings",
   "dark": "Dark",
   "date-information": "Date Information",
   "date-range": "Date Range",
@@ -209,12 +209,12 @@
   "extraction-mode-tolerant-tooltip-title": "Tolerant Mode Details",
   "extraction-mode-tolerant-tooltip-description": "Maximum AI intelligence for error-tolerant extraction from problematic sources. Includes all Balanced features plus intelligent inference and completion of missing information.",
   "extraction-mode-custom-tooltip-title": "Custom Mode Details",
-  "extraction-mode-custom-tooltip-description": "Build your own extraction rules with complete control over AI behavior. Configure each processing step individually to match your specific requirements.",
+  "extraction-mode-custom-tooltip-description": "Build your own extraction rules with complete control over AI behavior. Configure each extraction step individually to match your specific requirements.",
   "extraction-modification": "Extraction Modification",
   "extraction-publication-details": "Publication Details",
   "extraction-select-all": "Select All",
   "extraction-settings": "Extraction Settings",
-  "extraction-settings-description": "Configure the extraction mode and select which metadata fields should be extracted during document processing",
+  "extraction-settings-description": "Configure the extraction mode and select which metadata fields should be extracted during document extraction",
   "extraction-technical-details": "Technical Details",
   "extractionSettings": {
     "description": "Field Selection",
@@ -648,8 +648,8 @@
   "technical-fixes-description": "OCR errors, Unicode issues, and formatting problems",
   "test-api-key": "Test API Key",
   "text-matching-options": "Text Matching Options",
-  "text-processing": "Text Processing",
-  "text-processing-description": "Basic text corrections and normalizations",
+  "text-extraction": "Text Extraction",
+  "text-extraction-description": "Basic text corrections and normalizations",
   "theme": "Theme",
   "theme-option-description": "Select the theme of the extension",
   "title": "Title",
