feat: implement early termination feature in matching settings

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -460,6 +460,14 @@
   "match-quality-settings-description": "Konfigurieren Sie, wie Übereinstimmungswerte visuell mit Farben und Indikatoren dargestellt werden",
   "quality-thresholds": "Qualitäts-Klassifizierungs-Schwellenwerte",
   "quality-thresholds-description": "Legen Sie die Bewertungsbereiche fest, die bestimmen, wann eine Übereinstimmung als exakt, hoch oder schlechte Qualität betrachtet wird",
+  "early-termination-title": "Frühzeitige Beendigung",
+  "early-termination-description": "Beenden Sie die Suche automatisch, wenn eine Übereinstimmung mit ausreichend hoher Bewertung gefunden wird",
+  "early-termination-enabled": "Frühzeitige Beendigung aktivieren",
+  "early-termination-threshold": "Bewertungs-Schwellenwert",
+  "early-termination-threshold-description": "Mindestbewertung, um die Suche zu beenden (höhere Werte = strenger)",
+  "early-termination-threshold-low": "Weniger streng (50%)",
+  "early-termination-threshold-high": "Sehr streng (99%)",
+  "early-termination-current-setting": "Suche wird beendet bei Bewertung ≥ {threshold}%",
   "modification-type-abbreviation-expansion": "Abkürzungs-Erweiterung",
   "modification-type-author-name-formatting": "Autornamen-Formatierung",
   "modification-type-capitalization": "Großschreibung",
