--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -459,6 +459,14 @@
   "match-quality-settings-description": "Configure how match scores are visually represented with colors and indicators",
   "quality-thresholds": "Quality Classification Thresholds",
   "quality-thresholds-description": "Set the score ranges that determine when a match is considered exact, high, or poor quality",
+  "early-termination-title": "Early Termination",
+  "early-termination-description": "Automatically stop searching when a match with sufficiently high score is found",
+  "early-termination-enabled": "Enable early termination",
+  "early-termination-threshold": "Score Threshold",
+  "early-termination-threshold-description": "Minimum score required to stop searching (higher values = more strict)",
+  "early-termination-threshold-low": "Less strict (50%)",
+  "early-termination-threshold-high": "Very strict (99%)",
+  "early-termination-current-setting": "Search will stop at score ≥ {threshold}%",
   "modification-type-abbreviation-expansion": "Abbreviation Expansion",
   "modification-type-author-name-formatting": "Author Name Formatting",
   "modification-type-capitalization": "Capitalization",
